Add absencetype form and style

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
         <title>Som Energia - Gestor d'Absències</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" />
     </head>
     <body>
         <div class="ga-app" id="app"></div>
